# Bing-Chat-API

./: .env.example  LICENSE  README.md  example.env  main.py  main2.py  pyproject.toml  requirements.txt  setup.py
src/EdgeGPT/: EdgeGPT.py  constants.py  conversation.py
src/bing_chat/: BingUtils.py  chathub.py  main.py  request.py
